Add categories route
