# docs/swagger.json
@@ -31,6 +31,10 @@
     {
       "name": "Sidebar",
       "description": "Data for displaying in the sidebar"
+    },
+    {
+      "name": "Categories",
+      "description": "The list of available categories"
     }
   ],
   "paths": {
@@ -584,6 +588,87 @@
           },
           "401": {
             "$ref": "#/components/responses/401"
+          },
+          "404": {
+            "$ref": "#/components/responses/404"
+          }
+        }
+      }
+    },
+    "/categories": {
+      "get": {
+        "tags": [
+          "Categories"
+        ],
+        "summary": "Get all categories",
+        "description": "Get the list of available categories",
+        "operationId": "getAllTCategories",
+        "security": [],
+        "responses": {
+          "200": {
+            "description": "Get all categories",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "required": [
+                    "status",
+                    "message",
+                    "data"
+                  ],
+                  "properties": {
+                    "status": {
+                      "type": "integer",
+                      "example": 200
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "Successfully found categories"
+                    },
+                    "data": {
+                      "type": "object",
+                      "required": [
+                        "data"
+                      ],
+                      "properties": {
+                        "data": {
+                          "type": "object",
+                          "required": [
+                            "incomeCategories",
+                            "expenseCategories"
+                          ],
+                          "properties": {
+                            "incomeCategories": {
+                              "description": "The list of income categories",
+                              "type": "array",
+                              "example": [
+                                "Incomes"
+                              ]
+                            },
+                            "expenseCategories": {
+                              "description": "The list of expense categories",
+                              "type": "array",
+                              "example": [
+                                "Main expenses",
+                                "Products",
+                                "Car",
+                                "Self care",
+                                "Child care",
+                                "Household products",
+                                "Education",
+                                "Leisure",
+                                "Other expenses",
+                                "Entertainment"
+                              ]
+                            }
+                          }
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+            }
           },
           "404": {
             "$ref": "#/components/responses/404"
